infrastructure/configs/network-policies/components/allow-egress-to-authentik/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-authentik
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: authentik
      ports:
        - port: 9000
          protocol: TCP
        - port: 443
          protocol: TCP
        - port: 80
          protocol: TCP
